--- a/css/style.css
+++ b/css/style.css
@@ -12,7 +12,6 @@ body {
 
 section {
   padding: 150px;
-  background-color: #eee;
 }
 
 .text-align {
@@ -301,18 +300,33 @@ img {
 
 /* Media Query */
 
-@media screen and (max-width: 836px) {
+@media screen and (max-width: 1148px) {
   .service {
-    padding: 0 20px 0;
-    margin-top: 25px;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
   }
 
   .service-description__para {
     text-align: center;
   }
 
-  h2 {
-    font-size: 30px;
+  .about-center {
+    display: flex;
+    flex-direction: column;
+  }
+
+  .plan-center {
+    display: flex;
+    flex-direction: column;
+    padding: 0 25px;
+  }
+
+  .portfolio-center {
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
   }
 }
 
