--- a/css/style.css
+++ b/css/style.css
@@ -8,20 +8,23 @@ body {
   font-family: "lato" sans-serif;
 }
 
+/* .scroll {
+  background-color: transparent;
+} */
+
 /* Global CSS */
 
 section {
-  padding: 150px;
+  padding: 150px 25px;
 }
 
 .text-align {
   text-align: center;
 }
 
-/* .margin-top,
-.margin-bottom {
-  padding-top: 50px;
-} */
+.margin-top {
+  margin-top: 60px;
+}
 
 .margin-med {
   margin-top: 50px;
@@ -53,59 +56,151 @@ p {
 }
 /*End of  Global CSS */
 
-/* Row */
+.navbar {
+  background: #ff5925;
+  height: 80px;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  font-size: 1.2rem;
+  position: sticky;
+  top: 0;
+  z-index: 999;
+}
 
-.row {
-  max-width: 100rem;
-  /* background-color: rgb(255, 255, 255); */
+.navbar__container {
+  display: flex;
+  justify-content: space-between;
+  height: 80px;
+  z-index: 1;
+  width: 100%;
+  max-width: 1300px;
   margin: 0 auto;
-  /*selectors (ref line 21)
-  
-  ^ - selects the start of a class attribute example below, all the class attributes starts with "col"
-  * - select any class that contain the word "col"
-  $ - any class that ends with "col-"
-  
-  */
+  padding: 0 50px;
 }
-.row:not(:last-child) {
-  margin-bottom: 8rem;
+
+#navbar__logo {
+  background-color: #f6f6f6;
+  background-image: linear-gradient(to top, #d8d8d8 0%, #ffb1 100%);
+  background-size: 100%;
+  -webkit-background-clip: text;
+  -moz-background-clip: text;
+  -webkit-text-fill-color: transparent;
+  -moz-text-fill-color: transparent;
+  display: flex;
+  align-items: center;
+  cursor: pointer;
+  text-decoration: none;
+  font-size: 2rem;
 }
-.row::after {
-  content: "";
-  display: table;
-  clear: both;
+
+.fa-gem {
+  margin-right: 0.5rem;
 }
-.row [class^="col-"] {
-  float: left;
+
+.navbar__menu {
+  display: flex;
+  align-items: center;
+  list-style: none;
+  text-align: center;
 }
-.row [class^="col-"]:not(:last-child) {
-  margin-right: 6rem;
+
+.navbar__items {
+  height: 80px;
 }
-.row .col-1-of-2 {
-  width: calc((100% - 6rem) / 2);
+
+.navbar__links {
+  color: #fff;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  text-decoration: none;
+  padding: 0 1rem;
+  height: 100%;
 }
-.row .col-1-of-3 {
-  width: calc((100% - 2 * 6rem) / 3);
+
+/* Media Query */
+
+@media screen and (max-width: 960px) {
+  .navbar__container {
+    display: flex;
+    justify-content: space-between;
+    height: 150px;
+    z-index: 1;
+    width: 100%;
+    max-width: 1300px;
+    padding: 0;
+  }
+
+  .navbar__menu {
+    display: grid;
+    grid-template-columns: auto;
+    margin: 0;
+    width: 100%;
+    position: absolute;
+    top: -1000px;
+    opacity: 0;
+    transition: all 0.5s ease;
+    height: 100vh;
+    z-index: -1;
+    background: #222;
+  }
+
+  .navbar__menu.active {
+    background: #222;
+
+    top: 100%;
+    opacity: 0.7;
+    transition: all 0.5s ease;
+    z-index: 99;
+    height: 75vh;
+    font-size: 1.6rem;
+  }
+
+  #navbar__logo {
+    padding-left: 25px;
+  }
+
+  .navbar__toggle .bar {
+    width: 25px;
+    height: 3px;
+    margin: 5px auto;
+    transition: all 0.3s ease-in-out;
+    background: #fff;
+  }
+
+  .navbar__item {
+    width: 100%;
+  }
+
+  .navbar__links {
+    text-align: center;
+    padding: 0.5rem;
+    width: 100%;
+    display: table;
+  }
+
+  #mobile-menu {
+    position: absolute;
+    top: 20%;
+    right: 5%;
+    transform: translate(5%, 20%);
+  }
+
+  .navbar__toggle .bar {
+    display: block;
+    cursor: pointer;
+  }
+  #mobile-menu.is-active .bar:nth-child(2) {
+    opacity: 0;
+  }
+  #mobile-menu.is-active .bar:nth-child(1) {
+    transform: translateY(8px) rotate(45deg);
+  }
+  #mobile-menu.is-active .bar:nth-child(3) {
+    transform: translateY(-8px) rotate(-45deg);
+  }
 }
-.row .col-1-of-4 {
-  width: calc((100% - 3 * 6rem) / 4);
-}
-.row .col-2-of-3 {
-  width: calc(2 * ((100% - 2 * 6rem) / 3) + 6rem);
-}
-.row .col-1-of-3 {
-  width: calc((100% - 2 * 6rem) / 3);
-}
-.row .col-1-of-4 {
-  width: calc((100% - 3 * 6rem) / 4);
-}
-.row .col-2-of-4 {
-  width: calc(2 * ((100% - 3 * 6rem) / 4) + 6rem);
-}
-.row .col-3-of-4 {
-  width: calc(3 * ((100% - 3 * 6rem) / 4) + 2 * 6rem);
-}
-/*  End Row */
 
 nav {
   position: fixed;
@@ -117,36 +212,6 @@ nav {
   display: flex;
   justify-content: space-between;
   z-index: 1;
-  /* align-items: center; */
-}
-
-.nav-links {
-  display: flex;
-  list-style: none;
-  width: 35%;
-  height: 100%;
-  justify-content: space-around;
-  align-items: center;
-  margin-left: auto;
-}
-
-.nav-links li a {
-  color: white;
-  text-decoration: none;
-  font-size: 16px;
-}
-
-.landing {
-  height: 90vh;
-  display: flex;
-  justify-content: center;
-  align-items: center;
-}
-
-.landing h1 {
-  margin: 100px;
-  font-size: 50px;
-  color: #ae5fce;
 }
 
 @media screen and (max-width: 768px) {
@@ -272,6 +337,51 @@ nav {
   font-weight: 100;
 }
 
+/*  Button Styling */
+
+.main-btn {
+  font-size: 18px;
+  background-image: linear-gradient(to top, #ff5925 0%, #f88664 100%);
+  padding: 14px 32px;
+  border: none;
+  border-radius: 4px;
+  color: #eee;
+  margin-top: 2rem;
+  cursor: pointer;
+  position: relative;
+  transition: all 0.35s;
+  outline: none;
+}
+
+.main-btn a {
+  position: relative;
+  z-index: 2;
+  color: #eee;
+  text-decoration: none;
+}
+
+.main-btn:after {
+  position: absolute;
+  content: "";
+  top: 0;
+  left: 0;
+  width: 0;
+  height: 100%;
+  transition: all 0.35s;
+  background: #06aaac;
+  border-radius: 4px;
+}
+
+.main-btn:hover {
+  color: #fff;
+}
+
+.main-btn:hover:after {
+  width: 100%;
+}
+
+/* End of Button Styling */
+
 /* End of Hero Section */
 
 /* Services */
@@ -318,7 +428,7 @@ img {
   .plan-center {
     display: flex;
     flex-direction: column;
-    padding: 0 25px;
+    /* padding: 0 25px; */
   }
 
   .portfolio-center {
@@ -339,7 +449,7 @@ img {
   background-image: url(../images/background-1.jpg);
   color: #eee;
   clip-path: polygon(0 0, 100% 0%, 100% 95%, 0% 100%);
-  padding: 150px;
+  padding: 50px 15px 60px;
 }
 
 .about-title {
@@ -414,3 +524,201 @@ img {
 }
 
 /*End of Portfolio */
+
+/* Contact Form */
+ul {
+  list-style: none;
+  padding: 0;
+}
+
+.brand {
+  text-align: center;
+  margin-top: 60px;
+}
+
+.brand span {
+  color: #fff;
+}
+
+/* .wrapper {
+  box-shadow: 0 0 20px 0 rgba(72, 94, 116, 0.7);
+} */
+
+.contact-us {
+  background-image: url(/images/background-3.jpg);
+}
+
+.wrapper > * {
+  padding: 1em;
+  margin-top: 50px;
+  margin-bottom: 150px;
+}
+
+.contact-heading-text {
+  text-align: center;
+}
+
+.company-info {
+  background: #c9e6ff;
+}
+
+.company-info h3,
+.company-info ul {
+  text-align: center;
+  margin: 0 0 1rem 0;
+}
+.company-info h3 {
+  font-size: 25px;
+}
+.contact {
+  background: #f9feff;
+}
+
+/* FORM STYLES */
+.contact form {
+  display: grid;
+  grid-template-columns: 1fr 1fr;
+  grid-gap: 20px;
+}
+
+.contact form label {
+  display: block;
+}
+
+.contact form p {
+  margin: 0;
+}
+
+.contact form .full {
+  grid-column: 1 / 3;
+}
+
+.contact form button,
+.contact form input,
+.contact form textarea {
+  width: 100%;
+  padding: 1em;
+  border: 1px solid #c9e6ff;
+}
+
+.contact form button {
+  background: #c9e6ff;
+  border: 0;
+  text-transform: uppercase;
+}
+
+.contact form button:hover,
+.contact form button:focus {
+  background: #92bde7;
+  color: #fff;
+  outline: 0;
+  transition: background-color 2s ease-out;
+}
+
+/* LARGE SCREENS */
+@media (min-width: 700px) {
+  .wrapper {
+    display: grid;
+    grid-template-columns: 1fr 2fr;
+  }
+
+  .wrapper > * {
+    padding: 2em;
+  }
+
+  .company-info h3,
+  .company-info ul,
+  .brand {
+    text-align: left;
+  }
+}
+/* End of Contact Form */
+
+/* ==================================== */
+
+/* SERVICE DETAIL PAGE */
+
+/* Hero Section */
+
+.service-hero {
+  background: rgb(0, 0, 0);
+
+  background-attachment: fixed;
+  background-size: cover;
+  background-repeat: no-repeat;
+  background-position: bottom;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  z-index: -1;
+}
+
+.service-container {
+  display: grid;
+  grid-template-columns: 1fr 1fr;
+  align-items: center;
+  justify-self: center;
+  margin: 0 auto;
+  height: 50vh;
+  /* background-color: #f88664; */
+  z-index: 1;
+  width: 100%;
+  max-width: 580px;
+}
+
+.service-main__content h1 {
+  font-size: 4rem;
+  font-weight: 900;
+  background-color: #f88664;
+  background-image: linear-gradient(to top, #ff5925 0%, #b3340d);
+  background-size: 100%;
+  -webkit-background-clip: text;
+  -moz-background-clip: text;
+  -webkit-text-fill-color: transparent;
+  -moz-text-fill-color: transparent;
+}
+
+.service-main__content h2 {
+  font-size: 2rem;
+  color: #eee;
+  font-weight: 300;
+}
+
+@media screen and (max-width: 768px) {
+  .service-container {
+    display: grid;
+    grid-template-columns: auto;
+    align-items: center;
+    justify-self: center;
+    width: 100%;
+    margin: 0 auto;
+    height: 90vh;
+  }
+
+  .service-main__content {
+    text-align: center;
+    margin-bottom: 4rem;
+  }
+
+  .service-main__content h1 {
+    font-size: 3rem;
+  }
+
+  .service-main__content h2 {
+    font-size: 1.5rem;
+  }
+}
+
+@media screen and (max-width: 480px) {
+  .service-main__content h1 {
+    font-size: 2rem;
+  }
+
+  .service-main__content h2 {
+    font-size: 1.5rem;
+  }
+}
+
+/* End of Hero Section */
+
+/* ==================================== */
